add websocket status updates